# PG_practicas_0a4

./: CMakeLists.txt  leeme.txt  pract-pg.sln
Debug/PGUPV/: PGUPV.idb
Debug/PGUPV/PGUPV.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PGUPV.lastbuildstate
Debug/ej1-2/ej1-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej1-2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej1-3/ej1-3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej1-3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej1-4/: vc141.idb
Debug/ej1-4/ej1-4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej1-4.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej2-0/: vc141.idb
Debug/ej2-0/ej2-0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej2-0.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej2-1/ej2-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej2-1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej2-2/ej2-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej2-2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej2-3/: vc141.idb
Debug/ej2-3/ej2-3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej2-3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej3-1/ej3-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej3-1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej3-2/: vc141.idb
Debug/ej3-2/ej3-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej3-2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej3-3/: vc141.idb
Debug/ej3-3/ej3-3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej3-3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej3-4/: vc141.idb
Debug/ej3-4/ej3-4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej3-4.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej4-1/ej4-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej4-1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej4-2/ej4-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej4-2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej4-3/: vc141.idb
Debug/ej4-3/ej4-3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej4-3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej4-4/: vc141.idb
Debug/ej4-4/ej4-4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej4-4.lastbuildstate  ej4-4.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/p0/: vc141.idb
Debug/p0/p0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  p0.write.1u.tlog
Debug/p1/p1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  p1.write.1u.tlog
Debug/p2/p2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  p2.write.1u.tlog
Debug/p3/p3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  p3.write.1u.tlog
Debug/p4/p4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  p4.write.1u.tlog
PGUPV/: app.cpp  directionWidget.cpp  texture2DGeneric.cpp  textureText.cpp
PGUPV/include/: camerahandler.h  directionWidget.h  lightSourceWidget.h  listBoxWidget.h
ej1-1/: CMakeLists.txt  ej1-1.vcxproj  main.cpp
ej1-2/: CMakeLists.txt  ej1-2.vcxproj  main.cpp
ej1-3/: CMakeLists.txt  ej1-3.vcxproj  log.txt  main.cpp
ej1-4/: CMakeLists.txt  ej1-4.vcxproj  main.cpp
ej2-0/: CMakeLists.txt  ej2-0.vcxproj  main.cpp
ej2-1/: CMakeLists.txt  ej2-1.vcxproj
ej2-2/: CMakeLists.txt  ej2-2.vcxproj  main.cpp
ej2-3/: CMakeLists.txt  ej2-3.vcxproj  main.cpp
ej3-1/: CMakeLists.txt  ej3-1.vcxproj  log.txt  main.cpp
ej3-2/: CMakeLists.txt  ej3-2.vcxproj  main.cpp
ej3-3/: CMakeLists.txt  ej3-3.vcxproj  log.txt  main.cpp
ej3-4/: CMakeLists.txt  ej3-4.vcxproj  imgui.ini  log.txt  main.cpp
ej4-1/: CMakeLists.txt  ej4-1.vcxproj  log.txt  main.cpp
ej4-2/: CMakeLists.txt  ej4-2.vcxproj  imgui.ini  log.txt  main.cpp
ej4-3/: CMakeLists.txt  ej4-3.vcxproj  log.txt  main.cpp
ej4-4/: CMakeLists.txt  _ffmpeg.txt  ej4-4.vcxproj  imgui.ini  main.cpp  properties.ini
gui/: CMakeLists.txt  gui.vcxproj  main.cpp
librerias/guipg/: guipg.vcxproj  imGuIZMOquat.cpp
librerias/guipg/include/: imGuIZMOquat.h  vGizmo.h
p0/: log.txt  main.cpp  p0.vcxproj  properties.ini
p1/: log.txt  main.cpp  p1.vcxproj
p2/: CMakeLists.txt  log.txt  main.cpp  mirror.cpp  mirror.h  p2.vcxproj
p3/: CMakeLists.txt  log.txt  main.cpp  p3.vcxproj
p4/: main.cpp  p4.vcxproj  properties.ini
recursos/shaders/: vertexColorLit.frag  vertexColorLit.vert
